-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.8
-
None
-
13
-
9de508581 (dev), 3a2caf9ec (6.10), f48fb557c (6.9), 01ad63f49 (6.9.2), 8a1127f80 (tqtc/lts-6.8)
-
Foundation Sprint 134, Foundation Sprint 135
The QHttp2Stream implementation doesn't provide any handling or
verification of the HTTP/2 spec. The gRPC over HTTP/2 protocol clearly
defines how Response-Headers, Trailers and Trailers-Only have to behave.
Currently we are missing crucial steps of validation:
- HTTP status to be 200
- Trailers contain gRPC status
- Valid gRPC content-type found
Ref: https://github.com/grpc/grpc/blob/master/doc/PROTOCOL-HTTP2.md#responses